--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>My Resume  <a href="https://drive.google.com/file/d/1rKPPcRzUGd9h7BLKQSYbpAWF4Tjm6EHT/view?usp=sharing"><i class="icon-file-text"></i></li>
+					<h2>My Resume  <a href="https://drive.google.com/file/d/1rKPPcRzUGd9h7BLKQSYbpAWF4Tjm6EHT/view?usp=sharing"><i class="icon-file-text"></i>
 					</h2>
 					<h5>Behold, the map to my treasure trove of work experience. Download it by clicking the mystical icon above.</h5>
 				</div>
