--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Purva Kothari Personal Webiste &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>Purva Kothari Personal Webiste &mdash; Welcome to my website, where my coding skills are better than my sense of humor.</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="freehtml5.co" />
+	<meta name="description" content="Welcome to my website, where my coding skills are better than my sense of humor." />
+	<meta name="keywords" content="software, machine learning" />
+	<meta name="author" content="Purva Kothari" />
 
 	<!-- 
 	//////////////////////////////////////////////////////
