--- a/index.html
+++ b/index.html
@@ -59,10 +59,25 @@
 	<body>
 		
 	<div class="fh5co-loader"></div>
-	
-	<div id="page">	
+	<div id="page">
 	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/ucsd.jpeg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
+		<nav class="navbar navbar-default fh5co-nav">
+			<div class="container-fluid">
+			  <div class="navbar-header">
+				<a class="navbar-brand" href="#">Purva Kothari</a>
+			  </div>
+			  <ul class="nav navbar-nav">
+				<li class="active"><a href="#">Home</a></li>
+				<li><a href="#fh5co-about">About</a></li>
+				<li><a href="#fh5co-resume">Resume</a></li>
+				<li><a href="#fh5co-features">Interests</a></li>
+				<li><a href="#fh5co-skills">Skills</a></li>
+				<li><a href="#fh5co-blog">Others</a></li>
+				<li><a href="#fh5co-consult">Contact</a></li>
+			  </ul>
+			</div>
+		  </nav>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
@@ -553,7 +568,43 @@
 			</div>
 		</div>
 	</div>
-	
+	<div id="fh5co-blog" class="fh5co-bg-dark">
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2>Organizations</h2>
+					<p>Stuff that I really care about!</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="fh5co-blog animate-box">
+						<a href="https://gradwic.ucsd.edu" class="blog-bg" style="background-image: url(images/GradWIC.jpeg);"></a>
+						<div class="blog-text">
+							<!-- <span class="posted_on">Mar. 15th 2016</span> -->
+							<h3><a href="#">Graduate Women In Computing (GradWIC)</a></h3>
+							<p>As a K-12 Coordinator and Board Member for GradWIC, I'm responsible for promoting Computer Science and other STEM subjects to underrepresented communities, with a special focus on encouraging girls to pursue these fields.
+							</p>
+						</div> 
+					</div>
+				</div>
+
+
+				<div class="col-md-4">
+					<div class="fh5co-blog animate-box">
+						<a href="https://girlswhocode.com/" class="blog-bg" style="background-image: url(images/gwc.png);"></a>
+						<div class="blog-text">
+							<!-- <span class="posted_on">Mar. 15th 2016</span> -->
+							<h3><a href="#">Girls Who Code</a></h3>
+							<p>On a mission to close the gender gap in technology and to change the image of what a programmer looks like and does.
+							</p>
+						</div> 
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<br>
 	<div id="fh5co-started" class="fh5co-bg-dark">
 		<div class="overlay"></div>
 		<div class="container">
@@ -568,7 +619,6 @@
 			</div>
 		</div>
 	</div>
-
 	<div id="fh5co-consult">
 		<div class="video fh5co-video" style="background-image: url(images/contactMe.png);">
 			<div class="overlay"></div>
