updates on sections

--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Organizations</h2>
-					<p>Stuff that I really care about!</p>
+					<p>Stuff that I really care about! Surrounded myself with so many like-minded individuals that I started to feel like a cluster algorithm.</p>
 				</div>
 			</div>
 			<div class="row">
