--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 									<li><a href="#"><i class="icon-facebook2"></i></a></li> -->
 									<li><a href="https://www.linkedin.com/in/srinivas-dk/"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="https://github.com/srinivasDevarkadra"><i class="icon-github2"></i></a></li>
-									<li><a href="https://drive.google.com/file/d/1vDCVnF7VdabBtrJ7FqLOuODlwsLanl0T/view?usp=sharing"><i class="icon-file-text"></i></a></li>
+									<li><a href="https://drive.google.com/file/d/1McCmU_iKqewIssIBPduDKdnnLoxOUGAO/view?usp=sharing"><i class="icon-file-text"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -147,7 +147,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>My Resume  <a href="https://drive.google.com/file/d/1vDCVnF7VdabBtrJ7FqLOuODlwsLanl0T/view?usp=sharing"><i class="icon-file-text"></i>
+					<h2>My Resume  <a href="https://drive.google.com/file/d/1McCmU_iKqewIssIBPduDKdnnLoxOUGAO/view?usp=sharing"><i class="icon-file-text"></i>
 					</h2>
 					<h5>Behold, the map to my treasure trove of work experience. Download it by clicking the mystical icon above.</h5>
 				</div>
@@ -740,10 +740,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. 
+					<!--<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. 
 						All images taken from various online sources. 
 						<br><i>Unauthorized use of my stuff is strictly prohibited, unless you bring me pizza.</i>
-					</p>
+					</p>-->
 				</div>
 			</div>
 		</div>
